syntax = "proto3";

option go_package = "ravirajdarisi/auth-service/api/protobufs;protobufs";

package auth;

service AuthService {
  rpc SignupWithPhoneNumber(SignupRequest) returns (SignupResponse);
  rpc VerifyPhoneNumber(VerifyRequest) returns (VerifyResponse);
  rpc LoginWithPhoneNumber(LoginRequest) returns (LoginResponse);
  rpc ValidatePhoneNumberLogin(ValidatePhoneNumberRequest) returns (ValidatePhoneNumberResponse);
  rpc GetProfile(ProfileRequest) returns (ProfileResponse);
}

message SignupRequest {
  string phone_number = 1;
}

message SignupResponse {
  string message = 1;
}


message VerifyRequest {
  string phone_number = 1;
  string otp = 2;
}

message VerifyResponse {
  string message = 1;
}

message LoginRequest {
  string phone_number = 1;
  string otp = 2;
}

message LoginResponse {
  string message = 1;
  string session_token = 2; // Placeholder for a session token or JWT
  string otp = 3; 
}


message ValidatePhoneNumberRequest {
  string phone_number = 1;
}

message ValidatePhoneNumberResponse {
  string message = 1;
  bool is_valid = 2;
}

message ProfileRequest {
  string phone_number = 1;
}

message ProfileResponse {
  string phone_number = 1;
  string name = 2;
  string email = 3;
}